feat(media): 影视功能增强——扫描状态、中断重扫、剧/季层级、分页搜索排序、TMDB 候选打分
- 目录增加 SCANNING 扫描中状态，服务重启自动重置为失败
- 修改文件夹路径/媒体类型中断扫描并强制全量重扫：路径变更清空旧数据，类型变更保留手动匹配与播放进度
- 新增 t_media_series/t_media_season 层级表，扫描自动 upsert 与孤儿清理；电视海报墙直接分页查剧表
- 电影/电视/其他列表改分页加载（滚动到底加载下一页），支持关键词搜索（文件名/剧名/元数据标题/简介）
- 支持按添加时间（文件修改时间）/发行时间升降序排序，默认添加时间降序，发行时间为空沉底
- TMDB 自动匹配对齐 Jellyfin：文件名清洗剥季号/字幕组/版本标签，候选按标题归一化比对+年份容差打分，低于阈值记未识别